--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -61,65 +61,69 @@
 </style>
 
 <div class="row" style="height:100vh;">
+     @if(Model.ChosenCategoryId == null)
+             {
     <div class="col-md-3" style="background: #B9B9B9;" id="CategoriesDiv">
         <div style="margin-top:30px;">
+            
 
-            @foreach (var mainCategory in Model.MainCategories)
-            {
-                <button class="accordion">
-                    @if (Model.Culture == "uk")
-                    {
-                        <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameUkrainian</p></a>
-                    }
-                    else if (Model.Culture == "en")
-                    {
-                        <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameGeorgian</p></a>
-                    }
-                    else
-                    {
-                        <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameEnglish</p></a>
-                    }
-                </button>
-                <div class="panel">
-                    @foreach (var category in Model.Categories.Where(x => x.MainCategoryId == mainCategory.Id))
-                    {
-                        if (Model.ChosenCategoryId == category.Id)
+                @foreach (var mainCategory in Model.MainCategories)
+                {
+                    <button class="accordion" style="text-align:center">
+                        @if (Model.Culture == "uk")
                         {
-                            <div class="row activeCategory">
-                                @if (Model.Culture == "uk")
-                                {
-                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
-                                }
-                                else if (Model.Culture == "en")
-                                {
-                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
-                                }
-                                else
-                                {
-                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
-                                }
-                            </div>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameUkrainian</p></a>
+                        }
+                        else if (Model.Culture == "en")
+                        {
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameGeorgian</p></a>
                         }
                         else
                         {
-                            <div class="row categoryItem">
-                                @if (Model.Culture == "uk")
-                                {
-                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
-                                }
-                                else if (Model.Culture == "en")
-                                {
-                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
-                                }
-                                else
-                                {
-                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
-                                }
-                            </div>
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@mainCategory.NameEnglish</p></a>
                         }
-                    }
-                </div>
-            }
+                    </button>
+                    <div class="panel">
+                        @foreach (var category in Model.Categories.Where(x => x.MainCategoryId == mainCategory.Id))
+                        {
+                            if (Model.ChosenCategoryId == category.Id)
+                            {
+                                <div class="row activeCategory" style="text-align:center">
+                                    @if (Model.Culture == "uk")
+                                    {
+                                        <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                                    }
+                                    else if (Model.Culture == "en")
+                                    {
+                                        <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                                    }
+                                    else
+                                    {
+                                        <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                    }
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="row categoryItem" style="text-align:center">
+                                    @if (Model.Culture == "uk")
+                                    {
+                                        <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                                    }
+                                    else if (Model.Culture == "en")
+                                    {
+                                        <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                                    }
+                                    else
+                                    {
+                                        <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                    }
+                                </div>
+                            }
+                        }
+                    </div>
+                }
+            
 
 
 
@@ -164,6 +168,8 @@
                 }*@
         </div>
     </div>
+    
+            }
 
     <div class="col-md-9 bg-light" style="background: url('/content/images/background.svg') no-repeat bottom; background-position: 50% 115%;">
         <div class="container" style="margin-top:30px">
@@ -426,7 +432,7 @@
         <div class="col-md-2 justify-content-center" style="text-align:center">
             <div style="margin-left:auto;margin-right:auto;">
 
-                <div class="d-flex">
+                <div class="d-flex" style="margin-left:auto; margin-right:auto; margin-top:10px;">
                     <div style="width:30px; height:30px; margin-left:120px;cursor:pointer" onclick="window.open('https://t.me/+ugrIKNOeRGAzMzVi', '_blank');">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
                             <circle cx="23" cy="24" r="23" fill="white" />
@@ -461,6 +467,8 @@
                         font-size: 10px;
                         line-height: 15px;
                         margin-top:20px;
+                        margin-left:auto;
+                        margin-right:auto;
                         /* or 150% */
 
                         letter-spacing: 0.1em;
