--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -61,11 +61,53 @@
 </style>
 
 <div class="row" style="height:100vh;">
-     @if(Model.ChosenCategoryId == null)
-             {
-    <div class="col-md-3" style="background: #B9B9B9;" id="CategoriesDiv">
-        <div style="margin-top:30px;">
-            
+    @if (Model.ChosenCategoryId == null)
+    {
+        <div class="col-md-3" style="background: #B9B9B9;" id="CategoriesDiv">
+
+            <div style="margin-top:30px;" id="DesktopCategories">
+
+                @foreach (var category in Model.Categories)
+                {
+                    if (Model.ChosenCategoryId == category.Id)
+                    {
+                        <div class="row activeCategory">
+                            @if (Model.Culture == "uk")
+                            {
+                                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                            }
+                            else if (Model.Culture == "en")
+                            {
+                                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                            }
+                            else
+                            {
+                                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                            }
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="row categoryItem">
+                            @if (Model.Culture == "uk")
+                            {
+                                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                            }
+                            else if (Model.Culture == "en")
+                            {
+                                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                            }
+                            else
+                            {
+                                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                            }
+                        </div>
+                    }
+                }
+            </div>
+
+
+            <div style="margin-top:30px;" id="MobileCategories">
 
                 @foreach (var mainCategory in Model.MainCategories)
                 {
@@ -123,53 +165,11 @@
                         }
                     </div>
                 }
-            
 
-
-
-            @*
-
-                @foreach (var category in Model.Categories)
-                {
-                if (Model.ChosenCategoryId == category.Id)
-                {
-                <div class="row activeCategory">
-                @if (Model.Culture == "uk")
-                {
-                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
-                }
-                else if (Model.Culture == "en")
-                {
-                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
-                }
-                else
-                {
-                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
-                }
-                </div>
-                }
-                else
-                {
-                <div class="row categoryItem">
-                @if (Model.Culture == "uk")
-                {
-                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
-                }
-                else if (Model.Culture == "en")
-                {
-                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
-                }
-                else
-                {
-                <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
-                }
-                </div>
-                }
-                }*@
+            </div>
         </div>
-    </div>
-    
-            }
+
+    }
 
     <div class="col-md-9 bg-light" style="background: url('/content/images/background.svg') no-repeat bottom; background-position: 50% 115%;">
         <div class="container" style="margin-top:30px">
@@ -177,86 +177,36 @@
                 @if (!Model.ShowCategories)
                 {
 
-                    
+
 
 
 
                     <h1 style="text-align:center ">@SharedLocalizer["Home"]</h1>
                     <div class="col-md-8">
                         <!-- Slideshow container -->
-                    <div class="slideshow-container">
+                        <div class="slideshow-container">
 
-                        <!-- Full-width images with number and caption text -->
-                        <div class="mySlides fade">
-                            <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[0].Id})" style=" text-decoration: none; color:black;">
-                            <img src="data:image/png;base64,@Model.Posts[0].ThumbnailBase64" style="width:100%">
-                            <div class="text">
-                                @if (Model.Culture == "uk")
-                                {
-                                    <p class="textFont"><b>@Model.Posts[0].UkrainianTitle</b></p>
-                                }
-                                else
-                                {
-                                    <p class="textFont"><b>@Model.Posts[0].GeorgianTitle</b></p>
-                                }
+                            <!-- Full-width images with number and caption text -->
+                            <div class="mySlides fade">
+                                <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[0].Id})" style=" text-decoration: none; color:black;">
+                                    <img src="data:image/png;base64,@Model.Posts[0].ThumbnailBase64" style="width:100%">
+                                    <div class="text">
+                                        @if (Model.Culture == "uk")
+                                        {
+                                            <p class="textFont"><b>@Model.Posts[0].UkrainianTitle</b></p>
+                                        }
+                                        else
+                                        {
+                                            <p class="textFont"><b>@Model.Posts[0].GeorgianTitle</b></p>
+                                        }
+                                    </div>
+                                </a>
                             </div>
-                            </a>
-                        </div>
 
-                        <div class="mySlides fade">
-                            <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[1].Id})" style=" text-decoration: none; color:black;">
-                            <img src="data:image/png;base64,@Model.Posts[1].ThumbnailBase64" style="width:100%">
-                            <div class="text">
-                                 @if (Model.Culture == "uk")
-                                {
-                                    <p class="textFont"><b>@Model.Posts[1].UkrainianTitle</b></p>
-                                }
-                                else
-                                {
-                                    <p class="textFont"><b>@Model.Posts[1].GeorgianTitle</b></p>
-                                }
-                            </div>
-                            </a>
-                        </div>
-
-                        <div class="mySlides fade">
-                            <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[2].Id})" style=" text-decoration: none; color:black;">
-                            <img src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" style="width:100%">
-                            <div class="text"> 
-                                @if (Model.Culture == "uk")
-                                {
-                                    <p class="textFont"><b>@Model.Posts[2].UkrainianTitle</b></p>
-                                }
-                                else
-                                {
-                                    <p class="textFont"><b>@Model.Posts[2].GeorgianTitle</b></p>
-                                }</div>
-                            </a>
-
-                        </div>
-
-                        <!-- Next and previous buttons -->
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                    </div>
-                    <br>
-
-                    <!-- The dots/circles -->
-                    <div style="text-align:center">
-                        <span class="dot" onclick="currentSlide(1)"></span>
-                        <span class="dot" onclick="currentSlide(2)"></span>
-                        <span class="dot" onclick="currentSlide(3)"></span>
-                    </div>
-
-                    </div>
-                    <div class="col-md-4">
-
-                        @*@if (Model.Posts.ElementAtOrDefault(1) != null)
-                        {
-                            <div class="card-transparent mb-2">
+                            <div class="mySlides fade">
                                 <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[1].Id})" style=" text-decoration: none; color:black;">
-                                    <img class="card-img-top side-card-size" src="data:image/png;base64,@Model.Posts[1].ThumbnailBase64" alt="Card image cap">
-                                    <div class="card-body">
+                                    <img src="data:image/png;base64,@Model.Posts[1].ThumbnailBase64" style="width:100%">
+                                    <div class="text">
                                         @if (Model.Culture == "uk")
                                         {
                                             <p class="textFont"><b>@Model.Posts[1].UkrainianTitle</b></p>
@@ -268,13 +218,11 @@
                                     </div>
                                 </a>
                             </div>
-                        }
-                        @if (Model.Posts.ElementAtOrDefault(2) != null)
-                        {
-                            <div class="card-transparent mb-2">
-                                <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[2].Id})" style=" text-decoration: none;">
-                                    <img class="card-img-top side-card-size" src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" alt="Card image cap">
-                                    <div class="card-body">
+
+                            <div class="mySlides fade">
+                                <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[2].Id})" style=" text-decoration: none; color:black;">
+                                    <img src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" style="width:100%">
+                                    <div class="text">
                                         @if (Model.Culture == "uk")
                                         {
                                             <p class="textFont"><b>@Model.Posts[2].UkrainianTitle</b></p>
@@ -285,8 +233,61 @@
                                         }
                                     </div>
                                 </a>
+
                             </div>
-                        }*@
+
+                            <!-- Next and previous buttons -->
+                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        </div>
+                        <br>
+
+                        <!-- The dots/circles -->
+                        <div style="text-align:center">
+                            <span class="dot" onclick="currentSlide(1)"></span>
+                            <span class="dot" onclick="currentSlide(2)"></span>
+                            <span class="dot" onclick="currentSlide(3)"></span>
+                        </div>
+
+                    </div>
+                    <div class="col-md-4">
+
+                        @*@if (Model.Posts.ElementAtOrDefault(1) != null)
+                    {
+                    <div class="card-transparent mb-2">
+                    <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[1].Id})" style=" text-decoration: none; color:black;">
+                    <img class="card-img-top side-card-size" src="data:image/png;base64,@Model.Posts[1].ThumbnailBase64" alt="Card image cap">
+                    <div class="card-body">
+                    @if (Model.Culture == "uk")
+                    {
+                    <p class="textFont"><b>@Model.Posts[1].UkrainianTitle</b></p>
+                    }
+                    else
+                    {
+                    <p class="textFont"><b>@Model.Posts[1].GeorgianTitle</b></p>
+                    }
+                    </div>
+                    </a>
+                    </div>
+                    }
+                    @if (Model.Posts.ElementAtOrDefault(2) != null)
+                    {
+                    <div class="card-transparent mb-2">
+                    <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[2].Id})" style=" text-decoration: none;">
+                    <img class="card-img-top side-card-size" src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" alt="Card image cap">
+                    <div class="card-body">
+                    @if (Model.Culture == "uk")
+                    {
+                    <p class="textFont"><b>@Model.Posts[2].UkrainianTitle</b></p>
+                    }
+                    else
+                    {
+                    <p class="textFont"><b>@Model.Posts[2].GeorgianTitle</b></p>
+                    }
+                    </div>
+                    </a>
+                    </div>
+                    }*@
 
                         <div class="card-transparent mb-2" style="margin-top:20px;">
                             <a href="@Url.Action("Index", "Home", new {category = 47, page = 1})" style=" text-decoration: none;">
@@ -367,7 +368,7 @@
                     {
                         <nav aria-label="Page navigation example" style="margin:15px;">
                             <!-- pager -->
-                    <div class="container">
+                            <div class="container">
                                 @if (Model.Pager.EndPage > 1)
                                 {
                                     <ul class="pagination">
@@ -485,37 +486,44 @@
     </div>
 </div>
 
+
 <script>
+    window.onload = function() {
+        $('#load').hide();
 
-
-     window.onload = function() {
-      $('#load').hide();
-
-       @*if(window.innerWidth < 1000)
+        if(window.innerWidth < 1000)
         {
-            $("#CategoriesDiv").hide();
-        }*@
+            $("#MobileCategories").show();
+            $("#DesktopCategories").hide();
+        }
+        else
+        {
+             $("#MobileCategories").hide();
+            $("#DesktopCategories").show();
+        }
     };
+</script>
 
 
+<script>
 
     var acc = document.getElementsByClassName("accordion");
     var i;
 
     for (i = 0; i < acc.length; i++) {
-      acc[i].addEventListener("click", function() {
-        /* Toggle between adding and removing the "active" class,
-        to highlight the button that controls the panel */
-        this.classList.toggle("active");
+        acc[i].addEventListener("click", function() {
+            /* Toggle between adding and removing the "active" class,
+            to highlight the button that controls the panel */
+            this.classList.toggle("active");
 
-        /* Toggle between hiding and showing the active panel */
-        var panel = this.nextElementSibling;
-        if (panel.style.display === "block") {
-          panel.style.display = "none";
-        } else {
-          panel.style.display = "block";
-        }
-      });
+            /* Toggle between hiding and showing the active panel */
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        });
     }
 </script>
 
